# server/app.js
@@ -2,25 +2,30 @@ var createError = require('http-errors');
 var express = require('express');
 var path = require('path');
 var cookieParser = require('cookie-parser');
+const session = require('express-session');
 var logger = require('morgan');
 var cors = require('cors');
+const kakao = require("./utils/kakaoStrategy");
+const passport = require("passport");
+const jwt = require('./utils/jwt-util');
+
+
 require('dotenv').config();
+
+
 const swaggerUi = require('swagger-ui-express');
 const swaggerFile = require('./config/swagger-output.json')
 
-var indexRouter = require('./routes/index');
-var usersRouter = require('./routes/users');
+const router = require('./routes');
 
 var app = express();
-
-//MariaDB connect
-const maria = require('./database/connect/maria');
-maria.connect();
 
 //Cors정책
 let corsOptions = {
   origin: 'http://localhost:3000',
-  credentials: true
+  credentials: true, // 쿠키 등 credential 정보 허용
+  methods: ['GET', 'POST', 'OPTIONS', 'PUT', 'PATCH', 'DELETE'], // 허용할 메서드
+  allowedHeaders: ['Content-Type', 'Authorization'] // 허용할 헤더
 }
 
 app.use(cors(corsOptions));
@@ -28,18 +33,32 @@ app.use(cors(corsOptions));
 //Swagger 적용
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile, { explorer: true }));
 
-// // view engine setup
-app.set('views', path.join(__dirname, 'views'));
-app.set('view engine', 'ejs');
-
 app.use(logger('dev'));
 app.use(express.json());
 app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
 app.use(express.static(path.join(__dirname, 'public')));
 
-app.use('/', indexRouter);
-app.use('/users', usersRouter);
+app.use(session({
+  secret: process.env.COOKIE_SECRET_KEY,
+  resave: false,
+  saveUninitialized: false,
+  // cookie: {
+  //   httpOnly: true,
+  //   secure: false,
+  // },
+}));
+
+
+app.use(passport.initialize());
+app.use(passport.session());
+
+kakao(); // kakaoStrategy.js의 module.exports를 실행합니다.
+
+app.set('views', path.join(__dirname, 'views'));
+app.set('view engine', 'ejs');
+
+app.use('/', router);
 
 // catch 404 and forward to error handler
 app.use(function(req, res, next) {
